tests/health/tests__lsp__under_score.toit.gold
tests/lsp/under_score.toit:6:7: error: Missing implementations for interface methods
class B implements A:
      ^
tests/lsp/under_score.toit:4:3: note: Missing implementation for 'foo'
  foo x
  ^~~
